test/fail/DetSigNoExt.curry
module DetSigNoExt where

test :? Any
test :: Int
test = 1 ? 2
